Fix tap size and spacing for tap targets (#4161)
* Increase spacing between tap targets

* Add bottom margin to properly space tap targets

* Increase bottom margin for properly spaced tap sizes

* Increase size of tap targets for social icons in footer

* Remove changes to .social-icon in footer

--- a/client/src/document/index.scss
+++ b/client/src/document/index.scss
@@ -36,6 +36,10 @@ a.new {
 .main-page-content {
   padding: math.div($base-spacing, 2) $base-spacing $base-spacing;
 
+  ul li {
+    margin-bottom: 8px;
+  }
+
   .code-example {
     position: relative;
 
